--- a/dockerimage/reactapp/package.json
+++ b/dockerimage/reactapp/package.json
@@ -18,6 +18,7 @@
     "react-leaflet": "^4.0.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "recharts": "^2.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
